;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-1.3.5 relative to sbcl-1.3.4:
  * enhancement: the platform's strtod() is exposed as SB-POSIX:STRTOD
  * enhancement: speed up debug info creation for highly nested functions.
    (lp#1563355)
  * enhancement: the interleaved structure slot optimization from
    release 1.2.6 has been ported to all architectures.
  * enhancement: support run-program I/O redirection into lisp streams on
    Windows.
  * bug fix: better wording in missed optimization note. (lp#1003265)
  * bug fix: interpreted (CAS SVREF) was broken
  * bug fix: support CLISP as build host for ARM (lp#1568256, thanks to Tomas
    Hlavaty)

changes in sbcl-1.3.4 relative to sbcl-1.3.3:
  * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)
  * enhancement: CONSTANTP understands backquote.
    e.g. (CONSTANTP '`(0 (,CHAR-CODE-LIMIT))) => T
  * optimization: improvements to sequence functions: CONCATENATE, SUBSTITUTE,
    REVERSE.
  * bug fix: SB-EVAL does not signal an error for (THE KEYWORD :FOO)
  * bug fix: a DEFTYPE name that is redefined into a DEFSTRUCT name
    is less likely to cause confusion in the compiler.
  * bug fix: DOCUMENTATION works as intended for classes with non-standard
    metaclasses
  * bug fix: (TYPEP <extended-sequence> <extended-sequence-class>) no longer
    returns NIL in certain situations
  * bug fix: MAKE-SEQUENCE, MAP, CONCATENATE and MERGE accept class objects as
    result-type
  * bug fix: MAKE-SEQUENCE, MAP, CONCATENATE and MERGE expand DEFTYPEs in
    result-type

changes in sbcl-1.3.3 relative to sbcl-1.3.2:
  * enhancement: warn about argument mismatch for functions passed as
    arguments to other functions (e.g. REDUCE, MAP) at compile-time.
  * optimization: functions accepting other functions (e.g. REDUCE, FIND) can
    now be constant-folded if all function arguments are declared as foldable.
  * optimization: improved logical operations on integers of unknown type.