@@ -1,5 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.5:
+  * bug fix: do not insert conditional newlines in print-unreadable-object
+    (lp#1398290). This reverses a change made in lp#488979 which reversed
+    a fix advertised in release 0.8.14 to pass the GCL ANSI Test Suite.
+
 changes in sbcl-1.3.5 relative to sbcl-1.3.4:
   * enhancement: the platform's strtod() is exposed as SB-POSIX:STRTOD
   * enhancement: speed up debug info creation for highly nested functions.
